2000-04-13  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10724: Src/Zle/compresult.c, Src/Zle/zle_tricky.c: display
 	number of matches again when asking if a completion list should be
 	shown (only when not zero)
	
2000-04-12  Bart Schaefer  <schaefer@brasslantern.com>

	* 10706: Andrej: Completion/User/_man: Fix quoting in awk args.

2000-04-12  Oliver Kiddle  <opk@u.genie.co.uk>

	* 10701: Completion/Builtins/_bindkey, Doc/Zsh/mod_zle.yo:
	use _arguments for bindkey completion and fix typo in docs

2000-04-12  Bart Schaefer  <schaefer@zsh.org>

	* 10700: Andrej: Completion/User/_man: Support for Pyramid.

2000-04-12  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10699: Src/parse.c, Src/zsh.h: compare mapped zwc files using
 	stat instead of the pathnames
	
	* 10695: Completion/Core/_files, Completion/Core/_tags,
 	Doc/Zsh/compsys.yo: allow brace expansion on patterns for
 	file-patterns and tag-order
	
	* 10692: Src/builtin.c: missing initialisation for next field in
 	assignments for substitutions for fc builtin

	* 10691: Completion/Core/_main_complete, Completion/Core/_oldlist:
 	keep _oldlist from using the dummy match inserted for warnings
	
	* 10690: Doc/Zsh/compwid.yo, Src/Zle/compcore.c, Src/Zle/compctl.c,
 	Src/Zle/compresult.c: comment out the code to allow
 	$compstate[insert] to select the group
	
	* 10686: Src/Zle/compresult.c, Src/Zle/zle_tricky.c: display
 	number of lines instead of number of matches when asking whether
 	to show completion lists
	
	* 10685: Doc/Zsh/zle.yo, Src/hist.c, Src/Modules/parameter.c,
 	Src/Zle/iwidgets.list, Src/Zle/zle_misc.c: new widget
 	copy-prev-shell-word, like copy-prev-word but uses shell parsing
 	to find word
	
2000-04-11  Clint Adams  <schizo@debian.org>

	* 10680: Completion/User/_diff_options: spelling corrections.

2000-04-11  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10669: Completion/Core/compinstall:  will now ask for
	alternative files both for input and output.
